--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <div class="grid-container">
             <div class="grid-row">
                 <div class="image">
-                    <img src="resources/images/placeholder.png" alt="About Us Image">
+                    <img src="resources/images/carolecar1.png" alt="About Us Image">
                 </div>
                 <div class="text">
                     <h2>Why Learn to Drive?</h2>
@@ -199,7 +199,7 @@
 
             <div class="grid-row reverse">
                 <div class="image">
-                    <img src="resources/images/placeholder.png" alt="Our Founder Image">
+                    <img src="resources/images/david1.png" alt="Our Founder Image">
                 </div>
                 <div class="text reverse">
                     <h2>Why Choose Drive With Carole?</h2>
@@ -231,7 +231,7 @@
             <li><a href="chislehurst.html">Chislehurst</a></li>
             <li><a href="sidcup.html">Sidcup</a></li>
         </ul>
-        <a href="#areas" class="btn">See Full Area List</a>
+        <a href="areas.html" class="btn">See Full Area List</a>
     </div>
     
     
