--- a/test.html
+++ b/test.html
@@ -64,7 +64,7 @@
             <h1>Practical Driving Test</h1>
         </div>
         <div class="contactbtn">
-            <a href="contact.html" class="btn">Book Your First Lesson Today!</a>
+            <a href="contact.html" class="btn">Book Today!</a>
         </div>
     </div>
     
