--- a/refresher.html
+++ b/refresher.html
@@ -62,7 +62,7 @@
             <h1>Refresher Driving Lessons</h1>
         </div>
         <div class="contactbtn">
-            <a href="contact.html" class="btn">Book Your First Lesson Today!</a>
+            <a href="contact.html" class="btn">Book Today!</a>
         </div>
     </div>
     
