--- a/beckenham.html
+++ b/beckenham.html
@@ -307,8 +307,8 @@
                 <div>
                     <h3>Information</h3>
                     <ul>
-                        <li><a href="caroleadi.html">Carole (ADI)</a></li>
-                        <li><a href="carolescar.html">Carole's Car</a></li>
+                   <li><a href="caroleadi.html">Carole (ADI)</a></li>
+                        <li><a href="davidadi.html">David (ADI)</a></li>
                         <li><a href="faqs.html">FAQs</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
                     </ul>
