--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@
         </div>
         
         <div class="map-container">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3108.2814811279604!2d0.10547797661359075!3d51.399046771788875!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8ac657a5b868f%3A0xb2b7e06cc20df6ed!2sCurtismill%20Cl%2C%20Orpington!5e1!3m2!1sen!2suk!4v1731326318608!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+<iframe src="https://www.google.com/maps/d/embed?mid=1EnODCE_7JRZDYtRCue_xxoEt9jt_88E&hl=en&ehbc=2E312F" width="640" height="480"></iframe>
         </div>
     </div>
 
