--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@
         </div>
         
         <div class="map-container">
-<iframe src="https://www.google.com/maps/d/embed?mid=1EnODCE_7JRZDYtRCue_xxoEt9jt_88E&hl=en&ehbc=2E312F" width="640" height="480"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d59166.898611482946!2d0.053966375792805055!3d51.379979052051084!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2suk!4v1731851846950!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </div>
 
