--- a/davidadi.html
+++ b/davidadi.html
@@ -101,9 +101,9 @@
                     <img src="resources/images/david2.png" alt="Our Founder Image">
                 </div>
                 <div class="text reverse">
-                    <h2>David's Car - Ford Fiesta Zetec</h2>
+                    <h2>David's Car - Ford Fiesta Titanium X Turbo</h2>
                     <p>
-                        The Ford Fiesta Zetec is perfectly suited for driving lessons, offering a compact size and excellent visibility that help learners feel comfortable and in control on the road. Its smooth handling and well-marked controls make it easy for new drivers to navigate, while features like the Quickclear windscreen and front fog lamps enhance visibility in various conditions. The Fiesta’s manageable size allows for confident maneuvering, making parallel parking, tight turns, and lane changes easier for learners. With a five-star Euro NCAP safety rating and seven airbags, it’s a secure choice for students as they practice essential driving skills. The car’s intuitive layout and responsive handling create an ideal learning environment, helping new drivers progress confidently and safely.
+                        The Ford Fiesta Titanium X Turbo is an exceptional choice for driving lessons, combining advanced features with a compact size to boost learner confidence and control. Its smooth, turbocharged performance and precise handling make navigating the road straightforward, while the ergonomic controls ensure ease of use for new drivers. Features like the Quickclear heated windscreen and adaptive LED headlights enhance visibility in varying weather conditions, making every lesson safer and more comfortable. The Fiesta's compact dimensions facilitate confident maneuvering, simplifying tasks such as parallel parking, sharp turns, and lane changes. With a five-star Euro NCAP safety rating and multiple airbags, it offers robust protection, ensuring peace of mind for both instructors and students. The Titanium X Turbo’s refined interior, user-friendly technology, and responsive drive provide an ideal environment for learners to build their skills confidently and securely.
                     </p>
                     <ul>
                         <li><strong>Compact and Maneuverable</strong>: Ideal for learners, the Fiesta’s size makes parking and navigating tight spaces easier.</li>
