--- a/caroleadi.html
+++ b/caroleadi.html
@@ -108,7 +108,7 @@
                         The Ford Fiesta Zetec is perfectly suited for driving lessons, offering a compact size and excellent visibility that help learners feel comfortable and in control on the road. Its smooth handling and well-marked controls make it easy for new drivers to navigate, while features like the Quickclear windscreen and front fog lamps enhance visibility in various conditions. The Fiesta’s manageable size allows for confident maneuvering, making parallel parking, tight turns, and lane changes easier for learners. With a five-star Euro NCAP safety rating and seven airbags, it’s a secure choice for students as they practice essential driving skills. The car’s intuitive layout and responsive handling create an ideal learning environment, helping new drivers progress confidently and safely.
                     </p>
                     <ul>
-                        <li><strong>Compact and Maneuverable</strong>: Ideal for learners, the Fiesta’s size makes parking and navigating tight spaces easier.</li>
+                        <li><strong>Compact and Manoeuvrable</strong>: Ideal for learners, the Fiesta’s size makes parking and navigating tight spaces easier.</li>
                         <li><strong>Clear Visibility</strong>: Excellent visibility aids learners in spotting obstacles and safely handling turns.</li>
                         <li><strong>Reliable Safety</strong>: Equipped with seven airbags and a five-star Euro NCAP rating, providing peace of mind.</li>
                         <li><strong>Responsive Handling</strong>: Smooth and easy to drive, helping new drivers build confidence quickly.</li>
