--- a/caroleadi.html
+++ b/caroleadi.html
@@ -103,7 +103,7 @@
                     <img src="resources/images/carolecar2.png" alt="Our Founder Image">
                 </div>
                 <div class="text reverse">
-                    <h2>Carole's Car - Ford Fiesta Zetec</h2>
+                    <h2>Carole's Car - Ford Fiesta Zetec Turbo</h2>
                     <p>
                         The Ford Fiesta Zetec is perfectly suited for driving lessons, offering a compact size and excellent visibility that help learners feel comfortable and in control on the road. Its smooth handling and well-marked controls make it easy for new drivers to navigate, while features like the Quickclear windscreen and front fog lamps enhance visibility in various conditions. The Fiesta’s manageable size allows for confident maneuvering, making parallel parking, tight turns, and lane changes easier for learners. With a five-star Euro NCAP safety rating and seven airbags, it’s a secure choice for students as they practice essential driving skills. The car’s intuitive layout and responsive handling create an ideal learning environment, helping new drivers progress confidently and safely.
                     </p>
