--- a/davidadi.html
+++ b/davidadi.html
@@ -79,7 +79,7 @@
         <div class="grid-container">
             <div class="grid-row">
                 <div class="image">
-                    <img src="resources/images/david1.png" alt="About Us Image">
+                    <img src="resources/images/david12.png" alt="About Us Image">
                 </div>
                 <div class="text">
                     <h2>Meet David</h2>
