--- a/davidadi.html
+++ b/davidadi.html
@@ -84,15 +84,15 @@
                 <div class="text">
                     <h2>Meet David</h2>
                     <p>
-                        David is a fully qualified driving instructor who brings a wealth of experience and professionalism to his lessons. With a successful background in business and a strong pass rate, David combines his skills to deliver structured, effective lessons that help his students feel at ease. With Italian heritage, David often shares lighthearted stories from his family’s background, creating a relaxed and enjoyable atmosphere that makes learning to drive feel less intimidating. He’s committed to building a calm, productive environment where students can progress at their own pace, ensuring they not only pass their test but also feel confident and capable on the road. </p>
+                        David is a fully qualified driving instructor who brings a wealth of experience and professionalism to his lessons. With a successful background in business and a strong pass rate, David combines his skills to deliver structured, effective lessons that help his students feel at ease. Known for his approachable and friendly nature, David creates a relaxed and enjoyable atmosphere that makes learning to drive feel less intimidating. He’s committed to building a calm, productive environment where students can progress at their own pace, ensuring they not only pass their test but also feel confident and capable on the road.
+                    </p>
                     <ul>
                         <li><strong>Professional and Experienced</strong>: With a background in business and driving instruction, David brings a professional approach to each lesson.</li>
                         <li><strong>Calm and Supportive</strong>: Dedicated to a relaxed learning environment, David ensures students feel comfortable and confident behind the wheel.</li>
                         <li><strong>High Pass Rate</strong>: David’s structured, effective lessons have helped many students achieve success on their first attempt.</li>
-                        <li><strong>Warm and Personable</strong>: David’s Italian heritage adds a unique charm to his lessons, making each session enjoyable and memorable.</li>
-
-
+                        <li><strong>Warm and Personable</strong>: With hobbies like fishing, golfing, and football, David easily connects with students, making each session enjoyable and memorable.</li>
                     </ul>
+
                 </div>
             </div>
 
