--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
             </nav>
             <div class="contact-info">
                 <a href="contact.html"><p class="phonenumber">07828150432</p>
-                    <p class="phonenumber">07591144160</p>
+                
                 <p class="underphone">Teaching 7am - 6pm Mon-Fri</p>
                 <p class="underphone">Teaching 8am - 4pm Sat-Sun</p></a>
             </div>
@@ -76,6 +76,7 @@
             Give us a call or send a message to book a lesson, check availability, or learn more about our services. We're here to answer any questions and help you get started on your driving journey. Reach out – we’d be happy to assist!
         </div>
         <div class="contact-number">07828150432</div>
+        <div class="contact-number">07591144160</div>
         
         <div class="social-media">
             <p>You may also reach us on our social media:</p>
