--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
         <div class="paragraph">
             Give us a call or send a message to book a lesson, check availability, or learn more about our services. We're here to answer any questions and help you get started on your driving journey. Reach out – we’d be happy to assist!
         </div>
-        <div class="contact-number1">07828150432</div>
+        <div class="contact-number-one">07828150432</div>
         <div class="contact-number">07591144160</div>
         
         <div class="social-media">
