--- a/areas.html
+++ b/areas.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="Areas Covered">
     <title>Areas Covered</title>
     <link href="./resources/css/indexhf.css" type="text/css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="resources\images\favicon.png">
     <link href="./resources/css/area.css" type="text/css" rel="stylesheet">
 </head>
 <body>
