--- a/broadgreen.html
+++ b/broadgreen.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Learn to drive with the high rated Broad Green driving instructor.">
     <meta name="keywords" content="Broad Green Driving instructor">
+    <link rel="icon" type="image/x-icon" href="resources\images\favicon.png">
     <title>Broad Green Driving Instructor</title>
     <link href="./resources/css/indexhf.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/areaall.css" type="text/css" rel="stylesheet">
