--- a/bromley.html
+++ b/bromley.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="Bromley Driving instructor">
     <title>Bromley Driving Instructor</title>
     <link href="./resources/css/indexhf.css" type="text/css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="resources\images\favicon.png">
     <link href="./resources/css/areaall.css" type="text/css" rel="stylesheet">
 </head>
 <body>
