--- a/faqs.html
+++ b/faqs.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Driving Instructor FAQ's.">
     <meta name="keywords" content="Driving Instructor FAQ's">
+    <link rel="icon" type="image/x-icon" href="resources\images\favicon.png">
     <title>Driving Instructor FAQ's</title>
     <link href="./resources/css/indexhf.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/services.css" type="text/css" rel="stylesheet">
