--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Learn to drive with drive with Carole.">
     <meta name="keywords" content="Drive with Carole">
+    <link rel="icon" type="image/x-icon" href="resources\images\favicon.png">
     <title>Drive with Carole | Driving School</title>
     <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
 </head>
