--- a/mock.html
+++ b/mock.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Prepare for you driving test with mock driving lessons.">
     <meta name="keywords" content="Mock Driving Lessons">
+    <link rel="icon" type="image/x-icon" href="resources\images\favicon.png">
     <title>Mock Driving Lessons</title>
     <link href="./resources/css/indexhf.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/services.css" type="text/css" rel="stylesheet">
