--- a/norbury.html
+++ b/norbury.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="resources\images\favicon.png">
     <meta name="description" content="Learn to drive with the high rated Norbury driving instructor.">
     <meta name="keywords" content="Norbury Driving instructor">
     <title>Norbury Driving Instructor</title>
