--- a/orpington.html
+++ b/orpington.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Learn to drive with the high rated Orpington driving instructor.">
+    <link rel="icon" type="image/x-icon" href="resources\images\favicon.png">
     <meta name="keywords" content="Orpington Driving instructor">
     <title>Orpington Driving Instructor</title>
     <link href="./resources/css/indexhf.css" type="text/css" rel="stylesheet">
