--- a/stpaulscray.html
+++ b/stpaulscray.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Learn to drive with the high rated St Paul's Cray driving instructor.">
     <meta name="keywords" content="St Paul's Cray Driving instructor">
     <title>St Paul's Cray Driving Instructor</title>
+    <link rel="icon" type="image/x-icon" href="resources\images\favicon.png">
     <link href="./resources/css/indexhf.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/areaall.css" type="text/css" rel="stylesheet">
 </head>
