--- a/test.html
+++ b/test.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Use us for your practical driving test.">
     <meta name="keywords" content="Practical Driving Test">
     <title>Practical Driving Test</title>
+    <link rel="icon" type="image/x-icon" href="resources\images\favicon.png">
     <link href="./resources/css/indexhf.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/services.css" type="text/css" rel="stylesheet">
 </head>
