--- a/beddington.html
+++ b/beddington.html
@@ -16,7 +16,7 @@
         <div class="header-container">
             <div class="header-left">
                 <div class="logo">
-                   <a href="index.html"> <img src="resources/images/logo.png" alt="Driving Instructor Logo"></a>
+                   <a href="index"> <img src="resources/images/logo.png" alt="Driving Instructor Logo"></a>
                 </div>
             </div>
             <nav class="nav-bar">
