--- a/broadgreen.html
+++ b/broadgreen.html
@@ -22,7 +22,7 @@
             <nav class="nav-bar">
                 <ul>
                   
-                    <li class="dropdown"><a href="areas.html">Areas Covered</a>
+                    <li class="dropdown"><a href="areas">Areas Covered</a>
                         
                     </li>
                     <li class="dropdown">About Us
