--- a/mock.html
+++ b/mock.html
@@ -149,8 +149,8 @@
     
 
 
-</div>
-<a href="test.html"><div class="service-card">
+
+<a href="test"><div class="service-card">
     <img src="resources/images/test.jpg" alt="Service 3" class="service-image">
     <div class="service-info">
         <h3>Practical Driving Test</h3>
@@ -158,7 +158,7 @@
         <div class="servicebtn three"><a href="test" class="btn">Discover Freedom!</a></div>
     </div></a>
 </div>
-<a href="motorway.html"><div class="service-card">
+<a href="motorway"><div class="service-card">
     <img src="resources/images/motorway.jpg" alt="Service 4" class="service-image">
     <div class="service-info">
         <h3>Motorway Lessons</h3>
@@ -166,7 +166,7 @@
         <div class="servicebtn four"><a href="motorway" class="btn">Find Out More!</a></div>
     </div></a>
 </div>
-<a href="refresher.html"><div class="service-card">
+<a href="refresher"><div class="service-card">
     <img src="resources/images/refresher.jpg" alt="Service 5" class="service-image">
     <div class="service-info">
         <h3>Refresher Lessons</h3>
@@ -246,7 +246,7 @@
                 <a href="testimonials"><img src="resources/images/t2.jpg" alt="Testimonial 1"></a>
                 <div class="testimonialbtn" ><a href="testimonials" class="btn">Call Us Today!</a></div>
             </div><div>
-                <a href="testimonials.html"><img src="resources/images/t3.jpg" alt="Testimonial 1"></a>
+                <a href="testimonials"><img src="resources/images/t3.jpg" alt="Testimonial 1"></a>
                 <div class="testimonialbtn" ><a href="testimonials" class="btn">Explore Our Achievements!</a></div>
             </div>
         </div>
