--- a/index.html
+++ b/index.html
@@ -246,14 +246,14 @@
 
         <div class="testimonial-pictures">
             <div>
-                <a href="testimonials.html"><img src="resources/images/t1.jpg" alt="Testimonial 1"></a>
+                <a href="testimonials"><img src="resources/images/t1.jpg" alt="Testimonial 1"></a>
                 <div class="testimonialbtn" ><a href="testimonials" class="btn">Check Out Our Success!</a></div>
             </div>
             <div>
-                <a href="testimonials.html"><img src="resources/images/t2.jpg" alt="Testimonial 1"></a>
+                <a href="testimonials"><img src="resources/images/t2.jpg" alt="Testimonial 1"></a>
                 <div class="testimonialbtn" ><a href="testimonials" class="btn">Call Us Today!</a></div>
             </div><div>
-                <a href="testimonials.html"><img src="resources/images/t3.jpg" alt="Testimonial 1"></a>
+                <a href="testimonials"><img src="resources/images/t3.jpg" alt="Testimonial 1"></a>
                 <div class="testimonialbtn" ><a href="testimonials" class="btn">Explore Our Achievements!</a></div>
             </div>
         </div>
