--- a/bigginhill.html
+++ b/bigginhill.html
@@ -165,7 +165,7 @@
         <h3>Beginner Lessons</h3>
         <p>Beginner driving lessons are perfect for those new to driving. Our experienced St Mary Cray instructors create a calm, supportive environment designed to build your confidence and teach essential skills, step-by-step. From mastering the basics to becoming test-ready, we’ll guide you through every lesson, ensuring you feel prepared, comfortable, and fully in control on the road. </p>
         <div class="servicebtn one" style="color:white !important; -webkit-text-fill-color: white !important;"><a href="beginner" class="btn">Book Today!</a></div>
-    </div>
+    </div></a>
     
 </div>
 <a href="mock"><div class="service-card">
