Add analytics script to index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/x-icon" href="resources\images\favicon.png">
     <title>Drive with Carole | Driving School</title>
     <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
+    <script src="https://analytics.ahrefs.com/analytics.js" data-key="HqCsasiWJOUFEU341eK+ew" async></script>
 </head>
 <body>
     <!-- Header -->
