fix slash directions

--- a/addiscombe.html
+++ b/addiscombe.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Learn to drive with the high rated addiscombe driving instructor.">
     <meta name="keywords" content="Addiscombe Driving Instructor">
-    <link rel="icon" type="image/x-icon" href="resources\images\favicon.png">
+    <link rel="icon" type="image/x-icon" href="resources/images/favicon.png">
     <title>Addiscombe Driving Instructor</title>
     <link href="./resources/css/indexhf.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/areaall.css" type="text/css" rel="stylesheet">
