--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="resources\images\favicon.png">
+    <link rel="icon" type="image/x-icon" href="resources/images/favicon.png">
     <meta name="description" content="Contact us to book a driving lesson.">
     <meta name="keywords" content="contact us">
     <title>Contact Us</title>
@@ -122,7 +122,7 @@
             });
         </script>
     <!-- JavaScript for FAQ accordion functionality -->
-    <script src="resources\javascript\faq.js"></script>
+    <script src="resources/javascript/faq.js"></script>
 
 
 
