--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Learn to drive with drive with Carole.">
     <meta name="keywords" content="Drive with Carole">
-    <link rel="icon" type="image/x-icon" href="resources\images\favicon.png">
+    <link rel="icon" type="image/x-icon" href="resources/images/favicon.png">
+    <link rel="canonical" href="https://www.drivewithcarole.com/">
     <title>Drive with Carole | Driving School</title>
     <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
     <script src="https://analytics.ahrefs.com/analytics.js" data-key="HqCsasiWJOUFEU341eK+ew" async></script>
