--- a/motorway.html
+++ b/motorway.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Motorway Driving Lessons">
     <title>Motorway Driving Lessons</title>
     <link href="./resources/css/indexhf.css" type="text/css" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="resources\images\favicon.png">
+    <link rel="icon" type="image/x-icon" href="resources/images/favicon.png">
     <link href="./resources/css/services.css" type="text/css" rel="stylesheet">
 </head>
 <body>
