--- a/refresher.html
+++ b/refresher.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Get confident behind the wheel once more with refresher driving lessons.">
-    <link rel="icon" type="image/x-icon" href="resources\images\favicon.png">
+    <link rel="icon" type="image/x-icon" href="resources/images/favicon.png">
     <meta name="keywords" content="Refresher Driving Lessons">
     <title>Refresher Driving Lessons</title>
     <link href="./resources/css/indexhf.css" type="text/css" rel="stylesheet">
