--- a/testimonials.html
+++ b/testimonials.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Driving School Testimonials">
     <title>Driving School Testimonials</title>
     <link href="./resources/css/indexhf.css" type="text/css" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="resources\images\favicon.png">
+    <link rel="icon" type="image/x-icon" href="resources/images/favicon.png">
     <link href="./resources/css/testimonials.css" type="text/css" rel="stylesheet">
 </head>
 <body>
@@ -380,7 +380,7 @@
             });
         </script>
     <!-- JavaScript for FAQ accordion functionality -->
-    <script src="resources\javascript\faq.js"></script>
+    <script src="resources/javascript/faq.js"></script>
 
 
 
