--- a/addington.html
+++ b/addington.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="resources\images\favicon.png">
+    <link rel="icon" type="image/x-icon" href="resources/images/favicon.png">
     <meta name="description" content="Learn to drive with our high rated addington driving instructor.">
     <meta name="keywords" content=" Addington Driving instructor">
     <title>Addington Driving Instructor</title>
