--- a/ashburton.html
+++ b/ashburton.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Ashburton Driving instructor">
     <title>Ashburton Driving Instructor</title>
     <link href="./resources/css/indexhf.css" type="text/css" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="resources\images\favicon.png">
+    <link rel="icon" type="image/x-icon" href="resources/images/favicon.png">
     <link href="./resources/css/areaall.css" type="text/css" rel="stylesheet">
 </head>
 <body>
