--- a/beckenham.html
+++ b/beckenham.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Learn to drive with the high rated Beckenham driving instructor.">
-    <link rel="icon" type="image/x-icon" href="resources\images\favicon.png">
+    <link rel="icon" type="image/x-icon" href="resources/images/favicon.png">
     <meta name="keywords" content="Beckenham Driving instructor">
     <title>Beckenham Driving Instructor</title>
     <link href="./resources/css/indexhf.css" type="text/css" rel="stylesheet">
