--- a/beginner.html
+++ b/beginner.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Learn to drive with Beginner Driving Lessons.">
     <meta name="keywords" content="Beginner Driving Lessons">
-    <link rel="icon" type="image/x-icon" href="resources\images\favicon.png">
+    <link rel="icon" type="image/x-icon" href="resources/images/favicon.png">
     <title>Beginner Driving Lessons</title>
     <link href="./resources/css/indexhf.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/services.css" type="text/css" rel="stylesheet">
