--- a/davidadi.html
+++ b/davidadi.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Learn to drive with David Driving Instructor.">
-    <link rel="icon" type="image/x-icon" href="resources\images\favicon.png">
+    <link rel="icon" type="image/x-icon" href="resources/images/favicon.png">
     <meta name="keywords" content="David Driving Instructor">
     <title>David Driving Instructor</title>
     <link href="./resources/css/indexhf.css" type="text/css" rel="stylesheet">
