--- a/grovepark.html
+++ b/grovepark.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Learn to drive with the high rated Grove Park driving instructor.">
     <meta name="keywords" content="Grove Park Driving instructor">
     <title>Grove Park Driving Instructor</title>
-    <link rel="icon" type="image/x-icon" href="resources\images\favicon.png">
+    <link rel="icon" type="image/x-icon" href="resources/images/favicon.png">
     <link href="./resources/css/indexhf.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/areaall.css" type="text/css" rel="stylesheet">
 </head>
