--- a/monksorchard.html
+++ b/monksorchard.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Learn to drive with the high rated Monks Orchard driving instructor.">
     <meta name="keywords" content="Monks Orchard Driving instructor">
     <title>Monks Orchard Driving Instructor</title>
-    <link rel="icon" type="image/x-icon" href="resources\images\favicon.png">
+    <link rel="icon" type="image/x-icon" href="resources/images/favicon.png">
     <link href="./resources/css/indexhf.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/areaall.css" type="text/css" rel="stylesheet">
 </head>
