--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="canonical" href="https://www.drivewithcarole.com/">
     <title>Drive with Carole | Driving School</title>
     <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
-    <link href="./resources/css/nav.css" type="text/css" rel="stylesheet">
+    <link href="resources/css/nav.css" type="text/css" rel="stylesheet">
     <script src="https://analytics.ahrefs.com/analytics.js" data-key="HqCsasiWJOUFEU341eK+ew" async></script>
 </head>
 <body>
