--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
             </nav>
 
     
-         <a href="contactus" class="cs-button-solid cs-nav-button">07828150432<br>
-            <p class="under-number" style="color:#d9c6a6; font-size:1.5rem; margin-top: 0px; height:5px !important; margin-bottom: 0px;">Teaching 7am - 6pm Mon-Fri</p></a>
-            <p class="under-number" style="color:#d9c6a6; font-size:1.5rem; margin-top: 0px; height:5px !important; margin-bottom: 0px;">Teaching 8am - 4pm Sat-Sun</p></a>
+         <a href="contact" class="cs-button-solid cs-nav-button">07828150432<br>
+            <p class="under-number" style="color:#ff0000; font-size:1.5rem; margin-top: 0px; height:5px !important; margin-bottom: 0px;">Teaching 7am - 6pm Mon-Fri</p></a>
+            <p class="under-number" style="color:#ff0000; font-size:1.5rem; margin-top: 0px; height:5px !important; margin-bottom: 0px;">Teaching 8am - 4pm Sat-Sun</p></a>
           
         </div>
     </header>
