nav fixes index

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
  <div class="cs-ul-wrapper">
                     <ul id="cs-expanded" class="cs-ul" aria-expanded="false">
                         <li class="cs-li">
+                            <a href="areas" class="cs-li-link cs-active">
+                                Areas Covered
+                            </a>
+                        </li>
+                        <li class="cs-li">
                             <a href="caroleadi" class="cs-li-link cs-active">
                                 About Us
                             </a>
@@ -54,7 +59,6 @@
     
          <a href="contact" class="cs-button-solid cs-nav-button">07828150432<br>
             <p class="under-number" style="color:#ff0000; font-size:1.5rem; margin-top: 0px; height:5px !important; margin-bottom: 0px;">Teaching 7am - 6pm Mon-Fri</p></a>
-            <p class="under-number" style="color:#ff0000; font-size:1.5rem; margin-top: 0px; height:5px !important; margin-bottom: 0px;">Teaching 8am - 4pm Sat-Sun</p></a>
           
         </div>
     </header>
