under number size clamp

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     
          <a href="contact" class="cs-button-solid cs-nav-button">07828150432<br>
-            <p class="under-number" style="color:#ff0000; font-size: clamp(1.05rem, 1.3rem, 1.55rem);; margin-top: 0px; height:5px !important; margin-bottom: 0px;">Teaching 7am - 6pm Mon-Fri <br> Teaching 8am - 4pm Sat-Sun</p></a>
+            <p class="under-number" style="color:#ff0000; font-size: clamp(0.8rem, 0.9rem, 1.2rem); margin-top: 0px; height:5px !important; margin-bottom: 0px;">Teaching 7am - 6pm Mon-Fri <br> Teaching 8am - 4pm Sat-Sun</p></a>
           
         </div>
     </header>
