--- a/index.html
+++ b/index.html
@@ -32,10 +32,12 @@
                                 Areas Covered
                             </a>
                         </li>
-                        <li class="cs-li">
-                            <a href="caroleadi" class="cs-li-link cs-active">
-                                About Us
-                            </a>
+                        <li class="cs-li dropdown">
+                            <ul class="dropdown-menu">
+                                <li><a href="/oven-cleaning">Oven Cleaning</a></li>
+                                <li><a href="/bbq-cleaning">BBQ Cleaning</a></li>
+                                <li><a href="/repairs">Repairs</a></li>
+                            </ul>
                         </li>
                         <li class="cs-li">
                             <a href="testimonials" class="cs-li-link">
