styling for dropdown 1

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
                             </a>
                         </li>
                         <li class="cs-li dropdown">
-                            <a href="#">About Us</a>
+                            <a href="caroleadi" style="font-size: clamp(0.875rem, 1vw, 1.2rem); line-height: 1.5em; text-decoration: none;">About Us</a>
                             <ul class="dropdown-menu">
-                                <li><a href="/oven-cleaning">Oven Cleaning</a></li>
-                                <li><a href="/bbq-cleaning">BBQ Cleaning</a></li>
-                                <li><a href="/repairs">Repairs</a></li>
+                                <li><a href="/caroleadi">Carole ADI</a></li>
+                                <li><a href="/davidadi">David ADI</a></li>
+                                <li><a href="/hargadi">Harg ADI</a></li>
                             </ul>
                         </li>
                         <li class="cs-li">
