DJ TO DROPDOWN 2

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 
  <div class="cs-ul-wrapper">
                     <ul id="cs-expanded" class="cs-ul" aria-expanded="false">
-                        <li class="cs-li dropdown">
+                        <li class="cs-li dropdown2">
                             <a href="areas" class="cs-li-link cs-active">
                                 Areas Covered
                             </a>
-                             <ul class="dropdown-menu">
+                             <ul class="dropdown-menu2">
                                 <li><a href="/bromley">Bromley</a></li>
                                 <li><a href="/croydon">Croydon</a></li>
                             </ul>
