attempt to fix dropdown 2

--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
  <div class="cs-ul-wrapper">
                     <ul id="cs-expanded" class="cs-ul" aria-expanded="false">
                         <li class="cs-li dropdown2">
-                            <a href="areas" class="cs-li-link cs-active">
-                                Areas Covered
-                            </a>
+                            <a href="areas" style="font-size: clamp(0.875rem, 1vw, 1.2rem); line-height: 1.5em; text-decoration: none;">Areas Covered</a>
                              <ul class="dropdown-menu2">
                                 <li><a href="/bromley">Bromley</a></li>
                                 <li><a href="/croydon">Croydon</a></li>
