--- a/index.html
+++ b/index.html
@@ -284,9 +284,8 @@
            
             <div class="contact-us">
                 <h2>Contact Us</h2>
-                <p>Email: ovenrepairbasingstoke@gmail.com</p>
-                <p>Phone:  <a href="https://wa.me/447933885138">07933885138</a></p>
-                <p>Address: Basingstoke, Hampshire, UK</p>
+                <p>Phone:  <a href="https://wa.me/07828150432">07828150432</a></p>
+                <p>Address: Orpington, Greater London, UK</p>
                 <p>Facebook: <a href="https://www.facebook.com/carole.hurley.77">Drivewithcarole Adi</a></p>
                 <p>Instagram: <a href="https://www.instagram.com/drive_with_carole_/">drive_with_carole_</a></p>
             </div> 
@@ -299,7 +298,7 @@
                     <li><a href="motorway">Motorway Lessons</a></li>
                     <li><a href="caroleadi">Carole (ADI)</a></li>
                     <li><a href="davidadi">David (ADI)</a></li>
-                    <li><a href="hargadi">HARG (ADI)</a></li>
+                    <li><a href="hargadi">Harg (ADI)</a></li>
                 </ul>
             </div>
 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d44126.52359017999!2d0.08276758768527219!3d51.39416834277711!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2suk!4v1770143174175!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
