remove underline on web tag

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
     </footer>
     <div class="footer-bottom">
         <p>
-            Web design by <a href="https://www.webrevivestudio.co.uk/" style="font-weight: bold;">Web Revive studio</a>
+            Web design by <a href="https://www.webrevivestudio.co.uk/" style="font-weight: bold; text-decoration: none;">Web Revive studio</a>
         </p>
     </div>
     
