update hero img code

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Drive with Carole | Driving School</title>
     <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
     <link href="resources/css/nav.css" type="text/css" rel="stylesheet">
+    <link href="resources/css/hero.css" type="text/css" rel="stylesheet">
     <link href="resources/css/footer.css" type="text/css" rel="stylesheet">
     <script src="https://analytics.ahrefs.com/analytics.js" data-key="HqCsasiWJOUFEU341eK+ew" async></script>
 </head>
@@ -69,11 +70,23 @@
         </div>
     </header>
 
-    <!-- Main Content -->
-    <section class="hero-section">
-        <img src="resources/images/main.png" class="wideimg" alt="Hero Image">
-    </section>
-    
+
+ 
+        <section class="hero"></section>
+            <div class="hero-container">
+                <img src="resources/images/main.png" alt="drivewithcarolecar" class="hero-image">            
+            </div>
+        </section>
+
+        <section class="hero3">
+            <div class="hero-container">
+                <img src="resources/images/main.png" alt="drivewithcarolecar" class="hero-image">
+            </div>
+        </section>   
+
+
+
+
     <div class="call">
         <div class="question">
             <h1>Start Your Driving Journey Today!</h1>
